--- a/solutions.css
+++ b/solutions.css
@@ -24,3 +24,33 @@
 .ex-3-square:hover {
   border-radius: 50%;
 }
+
+/* ESERCIZIO 4 */
+
+.ex-4-square {
+  transition: 1s;
+}
+.ex-4-square:hover {
+  opacity: 0 ;
+}
+
+/* ESERCIZIO 5 */
+
+.ex-5-square {
+  transition: 1s;
+}
+.ex-5-square:hover {
+  transform: scale(2);
+}
+.ex-5-square:active {
+  transform: scale(0.5);
+}
+
+/* ESERCIZIO 6 */
+
+.ex-6-square {
+  transition: 1s;
+}
+.ex-6-img:hover {
+  filter: grayscale(100%);
+}
